checking the final task of sprint 5 (2)